<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_result_image"
        android:layout_width="240dp"
        android:layout_height="360dp"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_result_image" />

    <TextView
        android:id="@+id/tv_left_angle_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/before_left_armpit"
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result" />

    <TextView
        android:id="@+id/tv_left_angle_value_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_value_before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_angle_before" />

    <TextView
        android:id="@+id/tv_right_angle_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/before_right_armpit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_before"
        app:layout_constraintTop_toBottomOf="@id/tv_result" />

    <TextView
        android:id="@+id/tv_right_angle_value_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_value_before"
        app:layout_constraintTop_toBottomOf="@id/tv_right_angle_before" />

    <TextView
        android:id="@+id/tv_left_shoulder_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/left_sholuder"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_angle_value_before" />

    <TextView
        android:id="@+id/tv_left_shoulder_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_value_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_shoulder_angle" />

    <TextView
        android:id="@+id/tv_right_shoulder_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/right_shoulder"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_angle_value_before" />

    <TextView
        android:id="@+id/tv_right_shoulder_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_value_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_shoulder_angle" />

    <TextView
        android:id="@+id/tv_left_elbow_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/left_elbow"
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_shoulder_angle_value" />

    <TextView
        android:id="@+id/tv_left_elbow_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_value_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_elbow_angle" />

    <TextView
        android:id="@+id/tv_right_elbow_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/right_elbow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_shoulder_angle_value" />

    <TextView
        android:id="@+id/tv_right_elbow_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_value_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_elbow_angle" />

    <TextView
        android:id="@+id/tv_left_angle_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/after_left_armpit"
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_elbow_angle_value" />

    <TextView
        android:id="@+id/tv_left_angle_value_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/tv_right_angle_value_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_left_angle_after" />

    <TextView
        android:id="@+id/tv_right_angle_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/after_right_armpit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_elbow_angle_value" />

    <TextView
        android:id="@+id/tv_right_angle_value_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_angle_value_after"
        app:layout_constraintTop_toBottomOf="@id/tv_right_angle_after" />

    <Button
        android:id="@+id/btn_capture_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="96dp"
        android:paddingVertical="8dp"
        android:text="@string/capture"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <Button-->
    <!--        android:id="@+id/btn_gallery"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="48dp"-->
    <!--        android:layout_marginTop="18dp"-->
    <!--        android:layout_marginBottom="32dp"-->
    <!--        android:paddingVertical="8dp"-->
    <!--        android:text="앨범에서 가져오기"-->
    <!--        android:textSize="18dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="8dp"
        android:text="@string/save"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_capture_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>
